Fix extra space at bottom of flyout panel
Use li.custom-header-link (element+class) for higher specificity to
properly override padding from common.scss. Add align-content: flex-start
to prevent flex from distributing extra vertical space between rows.
Also zero out li margin/padding directly.

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -17,6 +17,7 @@
       width: 100%;
       flex-flow: row wrap;
       align-items: flex-start;
+      align-content: flex-start;
       justify-content: flex-start;
       overflow: scroll;
       max-height: 90vh;
@@ -28,10 +29,12 @@
 
       li {
         width: 100%;
+        padding: 0;
+        margin: 0;
       }
 
-      .custom-header-link {
-        padding-block: 0;
+      li.custom-header-link {
+        padding: 0;
       }
     }
 
