--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -10,6 +10,7 @@
     width: 100%;
     flex-flow: row wrap;
     align-items: flex-start;
+    align-content: flex-start;
     justify-content: flex-start;
     overflow: scroll;
     max-height: 90vh;
@@ -20,14 +21,16 @@
 
     li {
       width: 100%;
+      padding: 0;
+      margin: 0;
 
       @media screen and (width >= 768px) {
         width: auto;
       }
     }
 
-    .custom-header-link {
-      padding-block: 0;
+    li.custom-header-link {
+      padding: 0;
     }
   }
 
